# nhai-hack

./: .gitignore  App.tsx  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json  start-dev.js
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  face_pipeline.cpp  face_pipeline.h  math_utils.h  yuv_utils.h
android/app/src/main/java/com/anonymous/DatalakeApp/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/anonymous/DatalakeApp/facepipeline/: FacePipelineModule.kt  FacePipelinePackage.kt
android/app/src/main/res/values/: strings.xml
android/facepipeline/: build.gradle
assets/models/: face_recognition.tflite  model_metrics.json
scripts/: download_models.py  requirements.txt  train_face_model.py
src/components/: CameraScreen.tsx
src/services/: FaceModelService.ts  LivenessHeuristics.ts  SyncService.ts
